# biblioteca

./: .dockerignore  .gitignore  App.py  Dockerfile  README.md  SERVER_README.md  eslint.config.ts  index.html  package.json  pyproject.toml  template.docker-compose.yml  template.env  tsconfig.json  vite.config.ts
api/: Assets.py  Auth.py  Books.py  Users.py  __init__.py  exceptions.py
api/auth/: __init__.py  helpers.py
api/lib/: config.py  database.py  logger.py
api/models/: auth.py  auth_models.py  book_models.py  enums.py  requests.py  responses.py  rows.py
api/routes/: __init__.py  assets.py  auth.py  books.py  users.py
api/services/: db_operations.py  file_operations.py  user_service.py
dbinit/: 0000_create_db.sql  0001_alter_utenti.sql  0002_migrate_istituti.sql  0003_rename_id_utente.sql  0004_rename_id_istituto.sql
docs/: api.md  deployment.md  getting-started.md  project-overview.md
src/: main.tsx  mui.d.ts  routeTree.gen.ts  theme.ts
src/Providers/: DarkModeProvider.tsx
src/components/: BookInputForm.tsx  CustomAlert.tsx  InputForm.tsx  LoadingScreen.tsx  ProtectedPage.tsx  SearchBar.tsx  StatCard.tsx  UserCard.tsx
src/components/Accordions/: AccordionAutore.tsx  AccordionCollocazione.tsx  AccordionLibro.tsx  getRequired.ts
src/contexts/: AuthContext.tsx
src/hooks/: api.ts  auth.ts  authContext.ts  getHost.ts  useAuthStore.ts  useBookGrid.ts  useBookStore.ts  useRegister.tsx  useUserProfiles.ts  useUserlist.ts
src/routes/: -404.tsx  -error.tsx  _404.tsx  __root.tsx  books.$id.tsx  dashboard.tsx  index.tsx  login.tsx  register.tsx  userlist.tsx  users.me.tsx
src/styles/: bookGridStyles.ts
src/types/: User.ts  auth.ts  book.ts  user.ts
utils/: Logger.py  env.py
utils/auth/: auth_helper.py  oauth2.py
utils/database/: db_config.py  db_helper.py
(+16 files in other folders)
