[project]
name = "biblioteca"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.14.1",
    "authx>=1.7.1",
    "bcrypt>=5.0.0",
    "click>=8.4.2",
    "cryptography>=49.0.0",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi==0.138.1",
    "h11>=0.16.0",
    "h2>=4.3.0",
    "hpack>=4.2.0",
    "hypercorn>=0.18.0",
    "hyperframe>=6.1.0",
    "idna==3.18",
    "itsdangerous>=2.2.0",
    "natsort>=8.4.0",
    "pillow>=12.2.0",
    "priority>=2.0.0",
    "psycopg>=3.3.4",
    "psycopg-binary",
    "psycopg-pool",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sniffio>=1.3.1",
    "starlette==1.3.1",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.49.0",
    "wsproto>=1.3.2",
]
